Fixed problematic capybara test case with invisible file field

--- a/app/javascript/stylesheets/custom.scss
+++ b/app/javascript/stylesheets/custom.scss
@@ -41,6 +41,10 @@ $dropdown-link-color: var(--padgett-blue);
  color: var(--padgett-green);
 }
 
+.hidden_field {
+  display: none;
+}
+
 .button-text{
   @media only screen and (max-width:490px) {
     display: none;
